<resources>
    <string name="app_name">TREE-IN4</string>
    <string name="tree_in4">Việt teo pót</string>
    <string name="designer_pk01120">Designer by desiger</string>
    <string name="Tendangnhap">  Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="rematkhau">Nhập lại mật khẩu</string>
    <string name="dangki">Đăng kí</string>
    <string name="dangkied">Đã đăng kí?</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="ch_a_ng_k">Chưa đăng kí?</string>
    <string name="dangkia">ĐĂNG KÍ 📝</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="checkbox">  Ghi nhớ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abc">abcádhgahsdahsdg</string>
</resources>