<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backb1"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/logoa" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/do2"
            android:drawableLeft="@drawable/do2"
            android:drawablePadding="10dp"
            android:backgroundTintMode="add"
            android:backgroundTint="#FF4800"
            android:fontFamily="@font/cour"
            android:hint="@string/Tendangnhap"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingLeft="20dp"
            android:textColorHint="#"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="35dp"
        app:hintAnimationEnabled="true"
        app:hintEnabled="false"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext_password1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/do1"
            android:drawableLeft="@drawable/do1"
            android:drawablePadding="10dp"
            android:fontFamily="@font/cour"
            android:hint="@string/matkhau"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingLeft="20dp"
            android:textColorHint="#000000"
            android:textSize="20dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/cour"
        android:text="@string/checkbox" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:fontFamily="@font/courbd"
        android:text="@string/dangnhap"
        android:textColor="#FFFFFF"
        android:textSize="18sp"></Button>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="@font/cour"
            android:text="@string/ch_a_ng_k"
            android:textColor="#FF005EFF"></TextView>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:fontFamily="@font/cour"
            android:paddingLeft="10dp"
            android:text="@string/dangkia"
            android:textColor="#005EFF"
            android:textSize="18sp"
            android:textStyle="bold"></TextView>
    </LinearLayout>

</LinearLayout>